--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -64,6 +64,7 @@ label {
 
 .navbar-brand {
   padding: 0 15px;
+  height: unset;
 }
 
 #navbar-brand-wrapper {
